manifests/site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
  namespace: default
spec:
  selector:
    app: site
  ports:
    - port: 80
      targetPort: 8080
