manifests/site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: christian-wallace.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site
                port:
                  number: 80
    - host: www.christian-wallace.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site
                port:
                  number: 80
  tls:
    - hosts:
        - christian-wallace.com
        - www.christian-wallace.com
      secretName: site-tls
